# channel-rs

./: Cargo.toml
channel-receiver/: Cargo.toml  README.md
channel-receiver/src/: error.rs  generic.rs  impl_async_channel.rs  impl_tokio.rs  lib.rs  multi_consumer.rs  one_shot.rs  x_consumer.rs
channel-sender/: Cargo.toml  README.md
channel-sender/src/: error.rs  generic.rs  impl_async_channel.rs  impl_std.rs  impl_tokio.rs  lib.rs  multi_producer.rs  one_shot.rs
